# outspeed

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  dev-script.sh  dev.Dockerfile  docker-compose.yml  pyproject.toml
.circleci/: config.yml
examples/: avatar_bot.py  replay.py  streaming_example.py  voice_bot.py  websocket_example.py
examples/3d_avatar_chatbot/: avatar_bot.py  sample.env
examples/3d_chatbot_lipsync/: avatar.py
examples/cooking_assistant/: cooking_assistant.py  sample.env
examples/function_calling/: rag.py  sample.env  voice_bot_with_online_search.py
examples/human_avatar/: deepreel.py
examples/multilingual_voice_bot/: sample.env  voice_bot.py
examples/openai_realtime/: online_search.py  rag.py  sample.env  voice_bot.py  voice_bot_with_online_search.py  voice_bot_with_rt.py
examples/sports_commentator/: poker_commentator.py
examples/voice_bot/: sample.env  voice_bot.py
examples/voice_bot_custom_llm/: sample.env  voice_bot.py
examples/voice_bot_with_instructions/: voice_bot_with_json.py
examples/voice_bot_with_interrupts/: voice_bot.py
outspeed/: __init__.py  __main__.py  _realtime_function.py  app.py  cli.py  data.py  nodes.py  server.py  streams.py  tool.py
outspeed/ops/: combine_latest.py  filter.py  join.py  map.py  merge.py  unzip_array.py
outspeed/plugins/: audio_convertor.py  azure_stt.py  azure_tts.py  base_plugin.py  cartesia_tts.py  deepgram_stt.py  eleven_labs_tts.py  fal_vision.py  fireworks_llm.py  fireworks_vision.py  gemini_vision.py  groq_llm.py  key_frame_detector.py  lip_sync.py  openai_assistant.py  openai_llm.py  openai_vision.py  silero_vad.py  token_aggregator.py  vision_plugin.py  whisper_stt.py
outspeed/plugins/VAD/: silero_model.py
outspeed/plugins/contrib/talkinghead/: LICENSE-MIT  __init__.py  lipsync_en.py  text_to_viseme.py  viseme_to_audio.py
outspeed/plugins/openai_realtime/: events.py  openai_realtime.py  openai_realtime_basic.py  session.py  types.py
outspeed/streaming_endpoint/: AudioRTCDriver.py  TextRTCDriver.py  VideoRTCDriver.py  __init__.py  server.py
outspeed/utils/: audio.py  clock.py  images.py  tracing.py  vad.py
outspeed/utils/_internal/: metrics.py
outspeed/web_endpoint/: __init__.py
outspeed/websocket/: __init__.py  handler.py  processors.py
pyproject/m1/: pyproject.toml
realtime/: __init__.py  __main__.py  _realtime_function.py  app.py  cli.py  data.py  function.py  server.py  streams.py
realtime/ops/: combine_latest.py  join.py  map.py  merge.py  unzip_array.py
realtime/plugins/: audio_convertor.py  azure_tts.py  cartesia_tts.py  deepgram_stt.py  eleven_labs_tts.py  fireworks_llm.py  fireworks_vision.py  gemini_vision.py  groq_llm.py  key_frame_detector.py  lip_sync.py  openai_assistant.py  openai_llm.py  openai_vision.py  silero_vad.py  token_aggregator.py  vision_plugin.py  whisper_stt.py
realtime/plugins/VAD/: silero_model.py
realtime/streaming_endpoint/: AudioRTCDriver.py  TextRTCDriver.py  VideoRTCDriver.py  __init__.py  audio_frame_output.py  server.py  text_frame_output.py  video_frame_output.py
realtime/utils/: clock.py  cloneable_queue.py  images.py  tracing.py
realtime/web_endpoint/: __init__.py
realtime/websocket/: __init__.py  handler.py  processors.py
test/: conftest.py  openai_fixture.py  test_cartesia.py  test_cloneablequeue.py  test_deepgram.py  test_elevenlabs.py  test_fal.py  test_fireworks.py  test_fireworks_llm.py  test_fireworks_vision.py  test_openai.py  test_openai_vision.py  test_tool.py  test_vad.py  test_websocket.py
tests/regression_tests/: conftest.py  test_openai_plugin.py
tests/unit_tests/: test_tool.py  test_vad.py
