[tool.poetry]
name = "outspeed"
version = "0.2.1"
description = ""
authors = ["Outspeed <contact@outspeed.ai>"]
readme = "README.md"
packages = [{ include = "outspeed" }]

[tool.poetry.dependencies] # main dependency group
aiohttp = "^3.9.5"
realtime-aioice = "^0.9.0"
aiortc = "^1.8.0"
click = "^8.1.7"
dill = "^0.3.8"
fastapi = "^0.110.2"
python = ">=3.9 <4.0"
requests = "^2.31.0"
setuptools = "^69.5.1"
uvicorn = "^0.29.0"
websockets = "^12.0"
python-multipart = "^0.0.9"
urllib3 = "<2.0"
azure-cognitiveservices-speech = "^1.37.0"
openai = "^1.35.10"
pillow = "^10.3.0"
numpy = "^1.26.4"
scipy = "^1.13.1"
pyloudnorm = "^0.1.1"
pydub = "^0.25.1"
google-generativeai = "^0.7.0"

fal-client = { version = "^0.4.0", optional = true }
elevenlabs = { version = "^1.2.0", optional = true }
fireworks-ai = { version = "^0.14.0", optional = true }
opencv-python-headless = { version = "^4.10.0.82", optional = true }
google-cloud-vision = { version = "^3.7.2", optional = true }
torch = { version = "^2.2.0", optional = true }
torchaudio = { version = "^2.2.0", optional = true }
torchvision = { version = "^0.17.0", optional = true }
silero-vad = { version = "^5.1", optional = true }
dacite = "^1.8.1"
python-dotenv = "^1.0.1"
coloredlogs = "^15.0.1"
llama-index ="^0.11.17"

[tool.poetry.extras]
plugins = [
    "fal-client",
    "elevenlabs",
    "fireworks-ai",
    "opencv-python-headless",
    "google-cloud-vision",
]
silero = ["torch", "torchaudio", "torchvision", "silero-vad"]
all = [
    "fal-client",
    "elevenlabs",
    "fireworks-ai",
    "opencv-python-headless",
    "google-cloud-vision",
    "torch",
    "torchaudio",
    "torchvision",
    "silero-vad",
]

[tool.poetry.group.dev.dependencies]
aiohttp-middlewares = "^2.3.0"
matplotlib = "^3.8.4"
peakutils = "^1.3.4"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
addopts = "--cache-clear"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
outspeed = "outspeed.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ['.venv', '.git', '__pycache__', 'proto', 'build']
line-length = 120
lint.ignore = ['E501', 'E741']
lint.select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ['E712']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["outspeed"]
extra-standard-library = ["pytest"]
